[project]
name = "MaintenanceUncertainty"
version = "0.1.0"
description = "Choosing a Maintenance Policy Under Failure Uncertainty"
requires-python = ">=3.13,<3.14"

dependencies = [
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "python-dateutil>=2.9.0.post0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


